// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PolicySystemsTab expect to render with no systems table 1`] = `
<SystemsTable
  columns={
    Array [
      Object {
        "key": "name",
        "props": Object {
          "showLink": true,
          "width": 40,
        },
        "renderExport": [Function],
        "renderFunc": [Function],
        "sortBy": Array [
          "name",
        ],
        "title": "Name",
      },
      Object {
        "key": "tags",
      },
      Object {
        "dataLabel": "OS",
        "key": "operatingSystem",
        "original": "Operating System",
        "props": Object {
          "width": 10,
        },
        "renderExport": [Function],
        "renderFunc": [Function],
        "sortBy": Array [
          "osMajorVersion",
          "osMinorVersion",
        ],
        "title": <Tooltip
          content={
            <span>
              Operating System
            </span>
          }
        >
          <span>
            OS
          </span>
        </Tooltip>,
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "exportKey": "testResultProfiles",
        "key": "ssg_version",
        "renderExport": [Function],
        "renderFunc": [Function],
        "sortBy": Array [
          "ssg_version",
        ],
        "title": "SSG version",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  compact={false}
  complianceThreshold={100}
  compliantFilter={false}
  dedicatedAction={
    <EditSystemsButtonToolbarItem
      backgroundLocation={
        Object {
          "hash": "details",
        }
      }
      hash=""
      ouiaId="EditSystemsButton"
      to="/scappolicies/b71376fd-015e-4209-99af-4543e82e5dc5/edit"
      variant="primary"
    />
  }
  defaultFilter="policy_id = b71376fd-015e-4209-99af-4543e82e5dc5"
  enableExport={true}
  noSystemsTable={<NoSystemsTableWithWarning />}
  policyId="b71376fd-015e-4209-99af-4543e82e5dc5"
  preselectedSystems={Array []}
  remediationsEnabled={false}
  showActions={false}
  showComplianceSystemsInfo={false}
  showOnlySystemsWithTestResults={false}
  showOsMinorVersionFilter={
    Array [
      "7",
    ]
  }
/>
`;

exports[`PolicySystemsTab expect to render without error 1`] = `
<SystemsTable
  columns={
    Array [
      Object {
        "key": "name",
        "props": Object {
          "showLink": true,
          "width": 40,
        },
        "renderExport": [Function],
        "renderFunc": [Function],
        "sortBy": Array [
          "name",
        ],
        "title": "Name",
      },
      Object {
        "key": "tags",
      },
      Object {
        "dataLabel": "OS",
        "key": "operatingSystem",
        "original": "Operating System",
        "props": Object {
          "width": 10,
        },
        "renderExport": [Function],
        "renderFunc": [Function],
        "sortBy": Array [
          "osMajorVersion",
          "osMinorVersion",
        ],
        "title": <Tooltip
          content={
            <span>
              Operating System
            </span>
          }
        >
          <span>
            OS
          </span>
        </Tooltip>,
        "transforms": Array [
          [Function],
        ],
      },
      Object {
        "exportKey": "testResultProfiles",
        "key": "ssg_version",
        "renderExport": [Function],
        "renderFunc": [Function],
        "sortBy": Array [
          "ssg_version",
        ],
        "title": "SSG version",
        "transforms": Array [
          [Function],
        ],
      },
    ]
  }
  compact={false}
  complianceThreshold={100}
  compliantFilter={false}
  dedicatedAction={
    <EditSystemsButtonToolbarItem
      backgroundLocation={
        Object {
          "hash": "details",
        }
      }
      hash=""
      ouiaId="EditSystemsButton"
      to="/scappolicies/b71376fd-015e-4209-99af-4543e82e5dc5/edit"
      variant="primary"
    />
  }
  defaultFilter="policy_id = b71376fd-015e-4209-99af-4543e82e5dc5"
  enableExport={true}
  noSystemsTable={false}
  policyId="b71376fd-015e-4209-99af-4543e82e5dc5"
  preselectedSystems={Array []}
  remediationsEnabled={false}
  showActions={false}
  showComplianceSystemsInfo={false}
  showOnlySystemsWithTestResults={false}
  showOsMinorVersionFilter={
    Array [
      "7",
    ]
  }
/>
`;
